--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "css-loader": "^2.1.1",
+    "style-loader": "^0.23.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
